#355 Defer `HartshornUtils` collections in favor of specific collections